{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 10,
  "lineage": "44c072cd-deb6-0c9c-e0d3-0ce5b6fabc42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:939919218449:internet-gateway/igw-05cc4abdc9cdb8fe5",
            "id": "igw-05cc4abdc9cdb8fe5",
            "owner_id": "939919218449",
            "tags": {
              "Environment": "development",
              "Name": "igw-development"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "igw-development"
            },
            "vpc_id": "vpc-0aa7d481d6dfbdd54"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05cc4abdc9cdb8fe5",
            "id": "r-rtb-0d7a69e7dd2b1174f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7a69e7dd2b1174f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:939919218449:route-table/rtb-0d7a69e7dd2b1174f",
            "id": "rtb-0d7a69e7dd2b1174f",
            "owner_id": "939919218449",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "public-rt-development"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "public-rt-development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa7d481d6dfbdd54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:939919218449:subnet/subnet-08c97982e6573bd77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c97982e6573bd77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939919218449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "public-subnet-development-us-east-1a"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "public-subnet-development-us-east-1a"
            },
            "vpc_id": "vpc-0aa7d481d6dfbdd54"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:939919218449:subnet/subnet-033b391a1e640e613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033b391a1e640e613",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939919218449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "public-subnet-development-us-east-1b"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "public-subnet-development-us-east-1b"
            },
            "vpc_id": "vpc-0aa7d481d6dfbdd54"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:939919218449:subnet/subnet-0b1238dff91c73e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1238dff91c73e05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939919218449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "public-subnet-development-us-east-1c"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "public-subnet-development-us-east-1c"
            },
            "vpc_id": "vpc-0aa7d481d6dfbdd54"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:939919218449:vpc/vpc-0aa7d481d6dfbdd54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0b1d7a0ada680561a",
            "default_route_table_id": "rtb-05b2f15d89c18d2bd",
            "default_security_group_id": "sg-00045ffd6a298884f",
            "dhcp_options_id": "dopt-0bf862a53a5fd16b9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aa7d481d6dfbdd54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b2f15d89c18d2bd",
            "owner_id": "939919218449",
            "tags": {
              "Environment": "development",
              "Name": "vpc-development"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "vpc-development"
            }
          }
        }
      ]
    }
  ]
}